--- a/src/Mindbite.Mox.DirectoryListing/Views/Shared/DirectoryListing/EditDirectory.cshtml
+++ b/src/Mindbite.Mox.DirectoryListing/Views/Shared/DirectoryListing/EditDirectory.cshtml
@@ -1,7 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Routing;
+@using Microsoft.Extensions.Localization;
 @using Mindbite.Mox.Extensions
 @using Microsoft.EntityFrameworkCore
 
+@inject IStringLocalizer localizer
 @inject Mindbite.Mox.Services.IDbContextFetcher contextFetcher
 
 @model Mindbite.Mox.DirectoryListing.ViewModels.DocumentDirectory
@@ -45,14 +47,14 @@
     
     <fieldset class="buttons" style="margin-top: 12px;">
         <p>
-            <input type="submit" value="Spara ändringar" />
+            <input type="submit" value="@localizer["Spara ändringar"]" />
             @{
                 var cancelRouteData = new RouteValueDictionary(ViewContext.RouteData.Values)
                 {
                     { "DirectoryId", directoryUID }
                 };
             }
-            @Html.ActionLink("Avbryt", "ListDirectory", null, cancelRouteData, new { @class = "cancel" })
+            @Html.ActionLink(localizer["Avbryt"], "ListDirectory", null, cancelRouteData, new { @class = "cancel" })
         </p>
     </fieldset>
 }
