--- a/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/MyAccount/Edit.cshtml
+++ b/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/MyAccount/Edit.cshtml
@@ -8,7 +8,7 @@
 
 @inject IStringLocalizer localizer
 @inject Microsoft.AspNetCore.Identity.UserManager<Mindbite.Mox.Identity.Data.Models.MoxUser> userManager
-@inject Mindbite.Mox.Identity.Services.RoleGroupManager roleGroupManager
+@inject Mindbite.Mox.Identity.Services.IRoleGroupManager roleGroupManager
 
 @model Mindbite.Mox.Identity.ViewModels.EditMyAccountViewModel
 @{
