--- a/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Create.cshtml
+++ b/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Create.cshtml
@@ -4,7 +4,7 @@
 @using Microsoft.EntityFrameworkCore
 
 @inject IStringLocalizer localizer
-@inject Mindbite.Mox.Identity.Services.RoleGroupManager roleGroupManager
+@inject Mindbite.Mox.Identity.Services.IRoleGroupManager roleGroupManager
 
 @model Mindbite.Mox.Identity.ViewModels.CreateUserViewModel
 @{
