--- a/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Edit.cshtml
+++ b/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Edit.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.Extensions.Localization
 @using Microsoft.EntityFrameworkCore
 
-@inject Mindbite.Mox.Identity.Services.RoleGroupManager roleGroupManager
+@inject Mindbite.Mox.Identity.Services.IRoleGroupManager roleGroupManager
 @inject IStringLocalizer localizer
 
 @model Mindbite.Mox.Identity.ViewModels.EditUserViewModel
